--- a/main/dir/templates/menu_page.html
+++ b/main/dir/templates/menu_page.html
@@ -8,8 +8,8 @@
 <body>
     <h1>メニュー画面</h1>
     <ul>
-        <li><a href="#" class="">ちとこば</a></li>
-        <li><a href="#" class="">ゲーム</a></li>
+        <li><a href="/audio_book">ちとこば</a></li>
+        <li><a href="/game">ゲーム</a></li>
     </ul>
 </body>
 </html>
