誤字しゅうせい

--- a/main/dir/templates/audio_book.html
+++ b/main/dir/templates/audio_book.html
@@ -167,7 +167,7 @@
 <!--------------- Web Audio API ----------------->
 
         <div class="container">
-            <script src="./static/js/web_audio.js" type="text/javascipt"></script>
+            <script src="./static/js/web_audio.js" type="text/javascript"></script>
         </div>
 
 <!----------------------------------------------->
