create web audio api

--- a/main/dir/static/css/style.css
+++ b/main/dir/static/css/style.css
@@ -5,10 +5,8 @@ header{
     font-size: 1.2rem;
     padding: 10px 10px 20px 10px;
 }
-.wrapper{
-    height: 80vh;
-}
 .textcontent{
+    height: 70vh;
     writing-mode: vertical-rl;
     width: 100vw;
     overflow: scroll;
@@ -31,29 +29,25 @@ header{
     font-size: 0.8rem;
     padding: 5px 5px 0 0;
 }
-.audiocontent{
+
+/* footer{
     position: absolute;
     bottom: 5px;
-    left: 50%;
-    transform: translateX(-50%);
-}
+} */
 
-/* ------------- Web Audio API -------------- */
-
-.container {
+.audiocontent{
     display: flex;
-    height: 100%;
-    justify-content: center;
     align-items: center;
-    gap: 1px;
-    /* ･･･ */
+    justify-content: space-around;
 }
 
-.box {
-    flex: 1;
-    height: 100%;
-    scale: 1 0;
-    background: white;
+.audiocontent button{
+    display: inline-block;
+    background: #aaa;
+    border-radius: 20px;
+    padding: 0.5rem;
 }
 
-/* ------------------------------------------- */
+.audiocontent audio{
+    display: none;
+}
