--- a/main/dir/templates/audio_book.html
+++ b/main/dir/templates/audio_book.html
@@ -158,20 +158,15 @@
         }, 5000);
     </script>
     <footer>
+        <canvas id="canvas" width="300" height="80"></canvas>
         <div class="audiocontent">
+            <button id="playButton">再生</button>
+            <button id="stopButton">停止</button>
             <audio src="./static/audio/風花の満月.mp3" type="audio/mp3" id="audio" controls>
                 <p>音声が再生できません</p>
             </audio>
         </div>
-
-<!--------------- Web Audio API ----------------->
-
-        <div class="container">
-            <script src="./static/js/web_audio.js" type="text/javascipt"></script>
-        </div>
-
-<!----------------------------------------------->
-
     </footer>
+    <script src="./static/js/web_audio.js"></script>
 </body>
 </html>
