create web audio

--- a/main/dir/templates/top_page.html
+++ b/main/dir/templates/top_page.html
@@ -9,10 +9,9 @@
 </head>
 
 <body>
+    <div class="header-top">
         <div class="header">
-            <a href="https://www.wakashachiya.co.jp/">
-                <img src="./static/img/logo-removebg-preview 1.png" alt="">
-            </a>
+            <img src="./static/img/logo-removebg-preview 1.png" alt="">
         </div>
         <div class="main-titokoba">
             <div class="titokoba">
@@ -39,6 +38,7 @@
                 <img class="wakasyatiya-icon" src="./static/img/カレーうどん03-Photoroom 4のコピー.png" alt="">
             </div>
         </header>
+    </div>
 </body>
 
 </html>
