--- a/main/dir/static/css/style.css
+++ b/main/dir/static/css/style.css
@@ -1,5 +1,6 @@
 body{
     height: 100vh;
+    overflow: hidden;
 }
 header{
     font-size: 1.2rem;
@@ -22,7 +23,7 @@ header{
     text-align: right;
 }
 .textcontent p{
-    white-space: pre-wrap;
+    white-space: pre-line;
 }
 .date{
     text-align: right;
@@ -35,19 +36,38 @@ header{
     bottom: 5px;
 } */
 
+footer canvas{
+    display: block;
+    width: 80vw;
+    margin: 1vh auto;
+    height: 10vh;
+}
+
 .audiocontent{
+    position: absolute;
+    bottom: 1vh;
+    width: 100vw;
     display: flex;
-    align-items: center;
     justify-content: space-around;
 }
 
 .audiocontent button{
-    display: inline-block;
-    background: #aaa;
-    border-radius: 20px;
-    padding: 0.5rem;
+    width: 4rem;
+    height: 4rem;
+    border-radius: 50%;
 }
 
 .audiocontent audio{
+    display: none;
+}
+
+#playButton{
+    background: url(../img/play_button.png) no-repeat center center;
+    background-size: 100%;
+}
+
+#stopButton{
+    background: url(../img/stop_button.png) no-repeat center center;
+    background-size: 100%;
     display: none;
 }
