--- a/main/dir/static/css/style.css
+++ b/main/dir/static/css/style.css
@@ -1,3 +1,17 @@
+/* フォントの読み込み */
+@font-face {
+    font-family: 'myfont';
+    src: url(../font/GenEiKoburiMin6-R.ttf);
+}
+
+html {
+    font-size: 17.5px;
+    font-family: 'myfont';
+    line-height: 1.5;
+    color: black;
+    background-color: #F7F3E7;
+}
+
 body{
     height: 100vh;
     overflow: hidden;
