--- a/main/dir/templates/azumaya_top.html
+++ b/main/dir/templates/azumaya_top.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="../static/css/azumaya_top.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Afacad+Flux:wght@100..1000&family=Zen+Maru+Gothic&display=swap" rel="stylesheet">
     <title>四阿</title>
   </head>
   <body>
@@ -20,8 +23,9 @@
       </div>
       <div class="game">
         <a href="/game" class="text-color">
-          <h1>ゲーム</h1>
-          <p>テキストテキストテキスト<br />テキストテキストテキスト</p>
+          <h1>月までうどん</h1>
+          <p>宇宙を目指す スマホゲーム！</p>
+          <p>若鯱家のカレーうどんは</br>いったい どこまで伸びるのかな？</p>
         </a>
       </div>
     </main>
