--- a/main/dir/templates/azumaya_top.html
+++ b/main/dir/templates/azumaya_top.html
@@ -22,7 +22,7 @@
         </a>
       </div>
       <div class="game">
-        <a href="/game_tuki" class="text-color">
+        <a href="https://unityroom.com/games/tsukimadeudon" class="text-color">
           <h1>月までうどん</h1>
           <p>宇宙を目指す スマホゲーム！</p>
           <p>若鯱家のカレーうどんは</br>いったい どこまで伸びるのかな？</p>
