--- a/main/dir/templates/azumaya_top.html
+++ b/main/dir/templates/azumaya_top.html
@@ -11,7 +11,7 @@
   </head>
   <body>
     <header>
-      <img src="../static/img/logo-removebg-preview 1.png" alt="header_img" />
+      <img src="https://60561.play.unityroom.com/?expires=1739615012&salt=83682642042415724117793035672968702252&sig=28bd2c6c6299a6c414cb9de3f3c6e83f021ae7e0" alt="header_img" />
     </header>
     <main>
       <div class="titokoba">
