--- a/main/dir/static/css/style.css
+++ b/main/dir/static/css/style.css
@@ -1,10 +1,17 @@
 フォントの読み込み */
-
-.your-style {
-    font-family: 'GenEi Koburi Mincho v6';
+@font-face {
+    font-family: "GenEiKoburiMin";
+    src: url("fonts/GenEiKoburiMin6-R.woff2") format("woff2"),
+         url("fonts/GenEiKoburiMin6-R.woff") format("woff"); /* WOFFもあれば追加 */
     font-weight: normal;
     font-style: normal;
-}
+  }
+  
+  /* フォントを適用 */
+  body {
+    font-family: "GenEiKoburiMin", sans-serif;
+  }
+  
 
 
 html {
