--- a/main/dir/static/css/style.css
+++ b/main/dir/static/css/style.css
@@ -1,5 +1,5 @@
 フォントの読み込み */
-    @font-face {
+    /* @font-face {
         font-family: "GenEiKoburiMin";
         src: url("font/GenEiKoburiMin6-R.woff2") format("woff2"),
             url("font/GenEiKoburiMin6-R.woff") format("woff");
@@ -10,7 +10,7 @@
     /* フォントを適用 */
     body {
         font-family: "GenEiKoburiMin", sans-serif;
-    }
+    } */
     
 
 
@@ -25,6 +25,7 @@ html {
 body{
     height: 100vh;
     overflow: hidden;
+    font-family: "Hina Mincho", serif;
 }
 header{
     font-size: 1.2rem;
