フォントへんこう

--- a/main/dir/static/css/style.css
+++ b/main/dir/static/css/style.css
@@ -8,10 +8,10 @@
     }
     
     /* フォントを適用 */
-    body {
+    /* body {
         font-family: "GenEiKoburiMin", sans-serif;
     } */
-    
+     */
 
 
 html {
