ちとこばフォントをSawarabi Minchoに変更

--- a/main/dir/static/css/style.css
+++ b/main/dir/static/css/style.css
@@ -25,7 +25,7 @@ html {
 body{
     height: 100vh;
     overflow: hidden;
-    font-family: "Hina Mincho", serif;
+    font-family: "Sawarabi Mincho", serif;
 }
 header{
     font-size: 1.2rem;
