--- a/main/dir/templates/audio_book.html
+++ b/main/dir/templates/audio_book.html
@@ -1,27 +1,18 @@
 <!DOCTYPE html>
 <html lang="ja">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="./static/css/style.css"> <!-- CSSファイルの読み込みができない -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/destyle.css@3.0.2/destyle.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Shippori+Mincho&family=Zen+Old+Mincho&display=swap" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="./static/css/style.css"> <!-- CSSファイルの読み込みができない -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <title>ちとこば</title>
-    <style>
-        /* フォントの読み込み */
-        @font-face {
-            font-family: 'myfont';
-            src: url(./static/font/GenEiKoburiMin6-R.ttf);
-        }
-        html{
-            font-size: 17.5px;
-            font-family: 'myfont';
-            line-height: 1.5;
-            color: black;
-            background-color: #F7F3E7;
-        }
-    </style>
 </head>
+
 <body>
     <header>
         <h2>風花の満月</h2> <!-- ヘッダーの小さいタイトル -->
@@ -35,143 +26,138 @@
                         -朗読　七座 瑛斗</h3>
                 </div>
                 <p>　それは、二十年ほど前の雪が降る日だった。
-例年より早く降り積もった雪は、夕日に照らされ、店先が見事な銀世界になっていたことは今でもよく覚えている。
-いつもより多かった客足も星が瞬く頃には鳴りを潜めた。
-
-　街の喧騒がどこか遠くに感じる。きっと雪がまた降り始めたのだろう。
-月影る夜道を出歩く人があまりいないのも頷ける。
-
-今日は少し早めに店仕舞いをしても良いかも知れない。
-店主がそんな事を考えていると、ガラリという音と共に冷風が頬を撫でた。どうやらお客さんのご来店らしい。
-
-「こんばんは、まだやってるかい？」
-「こんばんは。ええ、まだやっていますよ。お好きな席へどうぞ」
-「ありがとう」
-
-やってきたのは、見事な帽子にトレンチコートを着こなす男性。それらに積もらせた雪に負けない程ほど白く立派な髭が印象的だ。
-
-「いやぁ、ここまで傘をさして来たはずなんだが、あまり意味がなかったみたいだよ」
-「それは大変でしたね、私は店内にいたのであまり分からないのですが、その様子から察するに、かなり降っていたのでは？」
-「ああ、靴が沈むくらいにね。おかげで何時もの倍の行路だ。後は見た通りだね」
-
-雪を払った彼は、少しはずれのカウンター席につき、さらりとメニューを眺める。
-
-「カレーうどんを単品でお願いできるかな？」
-「もちろん、おまかせください」
-
-きっと今日最後のお客だろう彼からの注文を受け、調理をはじめる。
-
-てぼの中で茹でられる麺の声。
-鈍く弾けるカレーの音。
-葱を刻む旋律。
-
-彼らが奏でる音が店に木霊する。
-
-「それにしても今日の雪は綺麗だね。余程別嬪さんな狸だったみたいだ」
-「どういうことです？」
-
-湯呑みで温まる彼が、ふと言ったことに店主は思わず聞き返してしまう。
-その質問に少しキョトンとした彼だったが、すぐに柔和な笑みを浮かべ店主に教える。
-
-「そういえば、こっちの方では言わないんだったね。『狐の嫁入り』ってあるだろう？」
-「晴れているのに雨が降ることですよね？」
-「その通り。僕が住んでいた北海道では、晴れているのに雪が降ることを『狸の嫁入り』って言うんだよ」
-「初めて知りましたよ。お客さん博識ですね」
-「はは、ただ長く生きただけの老いぼれだよ。現になんで『狸の嫁入り』と言うのかは知らないからね」
-
-気持ちよく笑う彼に釣られて店主も笑ってしまう。そんな中、てぼの中で踊る麺が音を変えた。どうやら茹で終えたらしい。
-
-店主は慣れた手付きで素早く盛り付け、客である彼に差し出した。
-
-「できましたよ、熱いのでお気を付けて」
-「ああ、ありがとう。頂くとするよ」
-
-元気に湯気立つカレーうどんを気を付けつつ彼は啜る。
-
-「うん、とても美味しいよ」
-「ありがとうございます」
-
-単純かつ分かりやすい褒め言葉に店主は思わず表情を柔和させる。昨今では直接感想を伝えてくれる客が減っていることを体感していることも相まって、店主は無意識により口角を上げた。
-
-半分ほど食べた頃だろうか、白い髭の彼は箸を休めた。
-
-「すまないが、お茶をもらえるかい？」
-「ええ、もちろん」
-「ありがとう、昔と変わらずとてもおいしいのだが...」
-
-彼は少し悲しげに喉を摩る。
-
-「よる年波には勝てないらしい、若い頃平気だった辛味がここまでくるとは」
-
-湯呑みを煽る彼に店主は何やら小皿をそっと差し出した。
-
-「これは？」
-「温玉ですよ、これで幾分かマイルドになるかと。味変ついでにいかがです？」
-「それは良い、ぜひ頼むとするよ。トッピングなんて久しくしていないから、なんだか新鮮だね」
-
-彼が食べているカレーうどんに温玉が浮かぶ。早速崩して食べ進めると思った店主だが、彼はまた湯呑みを煽る。
-
-「雪の夜に月見ができるとなれば酒が欲しい所だなぁ」
-「何か呑まれます？」
-
-店主がアルコールメニューを出そうとするが、他ならぬ彼がそれを静止した。
-
-「家内と娘に止められていてね」
-「それはそれは」
-「だからお茶で我慢よ」
-
-そう言って彼は三度湯呑みを煽った。
-
-満を持してカレーうどんに浮かぶ月を割った彼は時折雑談を店主としつつ箸を進める。
-器の中身が減るにつれて、会話も自然と少なくなった。
-寂しさを感じながらも、味に夢中になっている証拠とも言える行動に、店主の心もまた満たされていく。
-
-
-やがてその穏やかな時間は過ぎ去り、箸を伏せる音が凛と響いた。店主が彼の器を流し見ると、底が見える。白い髭の彼は綺麗に完食してくれたようだ。
-
-「ご馳走様。とても美味しかったよ」
-「お粗末様です。またどうぞ、いらしてくださいね」
-「もちろんだとも」
-
-風花の外へ赴くために会計を済ませ、コートを着る。
-扉を開けるとまた冷たい空気が頬を撫でた。
-
-「おや、良い月だ」
-「本当ですね」
-
-外に出ると、雪は然程降ってなく、ちらちらと舞う程度。空を見上げれば綺麗な満月が浮かんでいた。
-
-「それでは僕は行くとするよ。ご馳走様」
-「足元にお気を付け下さいね。次のご来店をお待ちしております」
-「ああ、ありがとう。またね」</p>
+                    例年より早く降り積もった雪は、夕日に照らされ、店先が見事な銀世界になっていたことは今でもよく覚えている。
+                    いつもより多かった客足も星が瞬く頃には鳴りを潜めていた。
+                    
+                    　街の喧騒がどこか遠くに感じる。きっと雪がまた降り始めたのだろう。
+                    月影る夜道を出歩く人があまりいないのも頷ける。
+                    
+                    今日は少し早めに店仕舞いをしても良いかも知れない。
+                    店主がそんな事を考えていると、ガラリという音と共に冷風が頬を撫でた。どうやらお客さんのご来店らしい。
+                    
+                    「こんばんは、まだやってるかい？」
+                    「こんばんは。ええ、まだやっていますよ。お好きな席へどうぞ」
+                    「ありがとう」
+                    
+                    やってきたのは、見事な帽子にトレンチコートを着こなす男性。それらに積もらせた雪に負けないほど白く立派な髭が印象的だ。
+                    
+                    「いやぁ、ここまで傘をさして来たはずなんだが、あまり意味がなかったみたいだよ」
+                    「それは大変でしたね、私は店内にいたのであまり分からないのですが、その様子から察するに、かなり降っていたのでは？」
+                    「ああ、靴が沈むくらいにね。おかげで何時もの倍の行路だ。後は見た通りだね」
+                    
+                    雪を払った彼は、少しはずれのカウンター席につき、さらりとメニューを眺める。
+                    
+                    「カレーうどんを単品でお願いできるかな？」
+                    「もちろん、おまかせください」
+                    
+                    きっと今日最後のお客だろう彼からの注文を受け、調理をはじめる。
+                    
+                    てぼの中で茹でられる麺の声。
+                    鈍く弾けるカレーの音。
+                    葱を刻む旋律。
+                    
+                    彼らが奏でる音が店に木霊する。
+                    
+                    「それにしても今日の雪は綺麗だね。余程別嬪さんな狸だったみたいだ」
+                    「どういうことです？」
+                    
+                    湯呑みで温まる彼が、ふと言ったことに店主は思わず聞き返してしまう。
+                    その質問に少しキョトンとした彼だったが、すぐに柔和な笑みを浮かべ店主に教える。
+                    
+                    「そういえば、こっちの方では言わないんだったね。『狐の嫁入り』ってあるだろう？」
+                    「晴れているのに雨が降ることですよね？」
+                    「その通り。僕が住んでいた北海道では、晴れているのに雪が降ることを『狸の嫁入り』って言うんだよ」
+                    「初めて知りましたよ。お客さん博識ですね」
+                    「はは、ただ長く生きただけの老いぼれだよ。現になんで『狸の嫁入り』と言うのかは知らないからね」
+                    
+                    気持ちよく笑う彼に釣られて店主も笑ってしまう。そんな中、てぼの中で踊る麺が音を変えた。どうやら茹で終えたらしい。
+                    
+                    店主は慣れた手付きで素早く盛り付け、客である彼に差し出した。
+                    
+                    「できましたよ、熱いのでお気を付けて」
+                    「ああ、ありがとう。頂くとするよ」
+                    
+                    元気に湯気立つカレーうどんを気を付けつつ彼は啜る。
+                    
+                    「うん、とても美味しいよ」
+                    「ありがとうございます」
+                    
+                    単純かつ分かりやすい褒め言葉に店主は思わず表情を柔和させる。昨今では直接感想を伝えてくれる客が減っていることを体感していることも相まって、店主は無意識により口角を上げた。
+                    
+                    半分ほど食べた頃だろうか、白い髭の彼は箸を休めた。
+                    
+                    「すまないが、お茶をもらえるかい？」
+                    「ええ、もちろん」
+                    「ありがとう、昔と変わらずとてもおいしいのだが....」
+                    
+                    彼は少し悲しげに喉を摩る。
+                    
+                    「よる年波には勝てないらしい、若い頃平気だった辛味がここまでくるとは」
+                    
+                    湯呑みを煽る彼に店主は何やら小皿をそっと差し出した。
+                    
+                    「これは？」
+                    「温玉ですよ、これで幾分かマイルドになるかと。味変ついでにいかがです？」
+                    「それは良い、ぜひ頼むとするよ。トッピングなんて久しくしていないから、なんだか新鮮だね」
+                    
+                    彼が食べているカレーうどんに温玉が浮かぶ。早速崩して食べ進めると思った店主だが、彼はまた湯呑みを煽る。
+                    
+                    「雪の夜に月見ができるとなれば酒が欲しい所だなぁ」
+                    「何か呑まれます？」
+                    
+                    店主がアルコールメニューを出そうとするが、他ならぬ彼がそれを静止した。
+                    
+                    「家内と娘に止められていてね」
+                    「それはそれは」
+                    「だからお茶で我慢よ」
+                    
+                    そう言って彼は三度湯呑みを煽った。
+                    
+                    満を持してカレーうどんに浮かぶ月を割った彼は時折雑談を店主としつつ箸を進める。
+                    器の中身が減るにつれて、会話も自然と少なくなった。
+                    寂しさを感じながらも、味に夢中になっている証拠とも言える行動に、店主の心もまた満たされていく。
+                    
+                    
+                    やがてその穏やかな時間は過ぎ去り、箸を伏せる音が凛と響いた。店主が彼の器を流し見ると、底が見える。白い髭の彼は綺麗に完食してくれたようだ。
+                    
+                    「ご馳走様。とても美味しかったよ」
+                    「お粗末様です。またどうぞ、いらしてくださいね」
+                    「もちろんだとも」
+                    
+                    風花の外へ赴くために会計を済ませ、コートを着る。
+                    扉を開けるとまた冷たい空気が頬を撫でた。
+                    
+                    「おや、良い月だ」
+                    「本当ですね」
+                    
+                    外に出ると、雪は然程降ってなく、ちらちらと舞う程度。空を見上げれば綺麗な満月が浮かんでいた。
+                    
+                    「それでは僕は行くとするよ。ご馳走様」
+                    「足元にお気を付け下さいね。次のご来店をお待ちしております」
+                    「ああ、ありがとう。またね」</p>
             </div>
             <div class="date">
-                <p>2025/1/24</p>
+                <script>
+                    const Dates = new Date();
+                    const year = Dates.getFullYear();
+                    const month = Dates.getMonth() + 1;
+                    const date = Dates.getDate();
+                    document.getElementsByClassName("date")[0].insertAdjacentHTML('beforeend', `<p>${year}/${month}/${date}</p>`);
+                </script>
             </div>
         </div>
     </main>
-    <script>
-        const textelement = document.getElementsByClassName("textcontent")[0];
-        const position = (textelement.scrollWidth *-1);
-        setTimeout(function(){
-            $(".textcontent").animate({scrollLeft: position}, 303000,"linear");
-        }, 5000);
-    </script>
     <footer>
+        <canvas id="canvas"></canvas>
         <div class="audiocontent">
-            <audio src="./static/audio/風花の満月.mp3" type="audio/mp3" id="audio" controls>
+            <button id="playButton"></button>
+            <button id="stopButton"></button>
+            <audio src="./static/audio/風花の満月-ボイスドラマ.mp3" type="audio/mp3" id="audio" controls>
                 <p>音声が再生できません</p>
             </audio>
         </div>
-
-<!--------------- Web Audio API ----------------->
-
-        <div class="container">
-            <script src="./static/js/web_audio.js" type="text/javascript"></script>
-        </div>
-
-<!----------------------------------------------->
-
     </footer>
+    <script src="./static/js/web_audio.js"></script>
 </body>
+
 </html>
