--- a/main/dir/templates/azumaya_top.html
+++ b/main/dir/templates/azumaya_top.html
@@ -11,7 +11,7 @@
   </head>
   <body>
     <header>
-      <img src="../static/img/logo-removebg-preview 1.png" alt="header_img" />
+      <img src="../static/img/logo-removebg-preview_1.png" alt="header_img" />
     </header>
     <main>
       <div class="titokoba">
