--- a/main/dir/templates/audio_book.html
+++ b/main/dir/templates/audio_book.html
@@ -152,7 +152,7 @@
         <div class="audiocontent">
             <button id="playButton"></button>
             <button id="stopButton"></button>
-            <audio src="./static/audio/風花の満月-ボイスドラマ.mp3" type="audio/mp3" id="audio" controls>
+            <audio src="../static/audio/風花の満月-ボイスドラマ.mp3" type="audio/mp3" id="audio" controls>
                 <p>音声が再生できません</p>
             </audio>
         </div>
